--- a/lessons/3 - Testing software and building packages/github_action_pytest.yml
+++ b/lessons/3 - Testing software and building packages/github_action_pytest.yml
@@ -5,15 +5,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
-        pytest --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pytest --junitxml=junit/test-results.xml
+
+    - name: Test Report
+      uses: pmeier/pytest-results-action@main
+      if: always()    # run this step even if previous step failed
+      with:
+        path: junit/*-results.xml    # Path to test results
+        
